k8s/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc 
spec:
  selector:
    app: wordpress
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
    targetPort: 80
